clusters/quantika/apps/odoo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: odoo
  namespace: odoo
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: odoo.indeweygerlings.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: odoo
                port:
                  number: 8069
